# rtpbridge

./: .dockerignore  .gitignore  .gitlab-ci.yml  .trivyignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  PLAN.md  README.md  REVIEW.md  deny.toml  rtpbridge.toml.example
.github/workflows/: ci.yml  docker.yml  docs.yml
benches/: codec_bench.rs  pcap_bench.rs  routing_bench.rs  srtp_bench.rs
cross/: Dockerfile.amd64
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/guide/: architecture.md  configuration.md  deployment.md  disaster-recovery.md  getting-started.md  observability.md  performance.md  troubleshooting.md
docs/protocol/: dtmf.md  endpoints.md  events.md  file-playback.md  overview.md  recording.md  session.md  stats.md  vad.md
docs/reference/: codecs.md  srtp.md
scripts/: cleanup-stale-netns.sh  dev-alpha-cluster.mjs
src/: config.rs  lib.rs  main.rs  metrics.rs  shutdown.rs
src/control/: connection.rs  handler.rs  mod.rs  protocol.rs  server.rs
src/media/: codec.rs  dtmf.rs  mod.rs  resample.rs  rtcp.rs  rtp.rs  sdp.rs  srtp.rs  transcode.rs  vad.rs
src/net/: mod.rs  socket_pool.rs
src/playback/: file_cache.rs  mod.rs  shared_playback.rs
src/recording/: mod.rs  pcap_writer.rs  recorder.rs
src/session/: endpoint.rs  endpoint_bridge.rs  endpoint_enum.rs  endpoint_file.rs  endpoint_rtp.rs  endpoint_tone.rs  endpoint_webrtc.rs  file_poll.rs  media_session.rs  mixer.rs  mod.rs  routing.rs  session_dtmf.rs  stats.rs  tone_poll.rs  vad_tap.rs
tests/: boundary_conditions_test.rs  bridge_test.rs  concurrent_mutations_test.rs  control_test.rs  critical_gaps_test.rs  direction_test.rs  e2e_supertest.rs  e2e_test.rs  edge_cases_test.rs  error_paths_test.rs  event_delivery_test.rs  file_playback_test.rs  malformed_input_test.rs  media_flow_test.rs  medium_gaps_test.rs  minor_gaps_test.rs  mixing_test.rs  production_readiness_test.rs  reconnect_race_test.rs  resource_exhaustion_test.rs  robustness_test.rs  srtp_media_test.rs  stats_content_test.rs  stress_test.rs  tone_test.rs  transcoding_test.rs  transfer_test.rs  vad_events_test.rs  webrtc_e2e_test.rs
(+8 files in other folders)
